# docs/swagger.json
@@ -18,6 +18,22 @@
     "host": "localhost:8000",
     "basePath": "/api/v1",
     "paths": {
+        "/healthcheck": {
+            "get": {
+                "description": "ヘルスチェック用API",
+                "tags": [
+                    "healthcheck"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.HealthCheckSuccessResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/login": {
             "post": {
                 "description": "ユーザー新規登録API",
@@ -121,6 +137,17 @@
                 "message": {
                     "type": "string",
                     "example": "error_message_is_here"
+                }
+            }
+        },
+        "controllers.HealthCheckSuccessResponse": {
+            "type": "object",
+            "required": [
+                "message"
+            ],
+            "properties": {
+                "message": {
+                    "type": "string"
                 }
             }
         },
